Mon Dec 20 14:16:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added connections inspector so connecting objects should work.
	Use information from 'ClassInformation.plist' to specify outlets
	and actions for a class.
	Added GormClassManager stuff to manage this information.

Sat Dec 18 21:24:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Add partial support for draagging into object view.
	Fix move/resize of window subviews to make sure subviews can't be
	dragged outside visible area.

Fri Dec 17 18:44:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Add some support for connections - handle link dragging within window
	editor - raise connection inspector on completion.

Thu Dec 16 21:35:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Change directory structure - add palettes directory, move palettes
	into it, rename them, change automatic loading of palettes to do
	it in palette name order.

Thu Dec 16 15:45:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormWindowEditor.m: Implemented support for moving and resizing
	subviews within a window.
	* Gorm.m: Implemented edit menu (mostly) with cut and paste.

Thu Dec 16  6:54:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GormWindowEditor.m: Implemented selection mechanism including
	marking subviews within a window by drawing knobs on them.

Wed Dec 15 15:27:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Archive save/restore fixes.
	Implementation of framework for interactive testing mode.

Tue Dec 14 20:13:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Enough for today.
	* View/View.m: Added a single button to the 'View' palette.
	* GormPaletteManager.m: improve DnD image ffset code.
	* GormWindowEditor.m: accept dropped views in window.
 
Tue Dec 14 19:53:00 1999 Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Removed GormResourcesManager - merged functionality into GormDocument