@@ -2,18 +2,6 @@
 #define GORMDOCUMENT_H
 
 /*
- * Each document has a GormFilesOwner object that is used as a placeholder
- * for the owner of the document.
- */
-@interface	GormFilesOwner : NSObject
-{
-  NSString	*className;
-}
-- (NSString*) className;
-- (void) setClassName: (NSString*)aName;
-@end
-
-/*
  * Each document has a GormFirstResponder object that is used as a placeholder
  * for the first responder at any instant.
  */
